[package]
name = "tcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
config = "0.15.11"
mlua = { version = "0.10.3", features = ["lua54", "send", "serialize"] }
reqwest = {version = "0.12.15",  features = ["json"] }
serde = {version = "1.0.219", features = ["derive"]}
serde_cbor = "0.11.2"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
